--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
     },
     "dependencies": {
-        "@expo/vector-icons": "^10.0.0",
+        "@expo/vector-icons": "^12.0.0",
         "@react-native-community/async-storage": "~1.12.0",
         "@rematch/core": "^1.3.0",
         "@rematch/loading": "^1.2.1",
@@ -31,19 +31,19 @@
         "axios": "^0.21.1",
         "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.4.1",
-        "expo": "^39.0.0",
-        "expo-asset": "~8.2.0",
-        "expo-barcode-scanner": "~9.0.0",
-        "expo-constants": "~9.2.0",
-        "expo-firebase-analytics": "~2.5.0",
-        "expo-firebase-core": "~1.2.0",
-        "expo-font": "~8.3.0",
-        "expo-localization": "~9.0.0",
-        "expo-notifications": "~0.7.2",
-        "expo-permissions": "~9.3.0",
-        "expo-splash-screen": "~0.6.1",
-        "expo-status-bar": "~1.0.2",
-        "expo-store-review": "~2.2.0",
+        "expo": "^40.0.0",
+        "expo-asset": "~8.2.1",
+        "expo-barcode-scanner": "~9.1.0",
+        "expo-constants": "~9.3.3",
+        "expo-firebase-analytics": "~2.6.0",
+        "expo-firebase-core": "~1.3.0",
+        "expo-font": "~8.4.0",
+        "expo-localization": "~9.1.0",
+        "expo-notifications": "~0.8.2",
+        "expo-permissions": "~10.0.0",
+        "expo-splash-screen": "~0.8.1",
+        "expo-status-bar": "~1.0.3",
+        "expo-store-review": "~2.3.0",
         "firebase": "7.9.0",
         "globally": "^0.0.0",
         "i18n-js": "^3.8.0",
@@ -54,10 +54,10 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-helmet": "^5.2.1",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
         "react-native-animated-splash-screen": "^2.0.5",
         "react-native-credit-card-input": "^0.4.1",
-        "react-native-gesture-handler": "~1.7.0",
+        "react-native-gesture-handler": "~1.8.0",
         "react-native-map-link": "^2.7.10",
         "react-native-maps": "0.27.1",
         "react-native-modal": "^11.5.6",
@@ -65,7 +65,7 @@
         "react-native-qrcode-svg": "^6.0.6",
         "react-native-reanimated": "~1.13.0",
         "react-native-router-flux": "4.2.0",
-        "react-native-screens": "~2.10.1",
+        "react-native-screens": "~2.15.0",
         "react-native-svg": "12.1.0",
         "react-native-tab-view": "^2.15.2",
         "react-navigation-stack": "1.4.0",
@@ -82,13 +82,13 @@
         "slash": "^3.0.0"
     },
     "devDependencies": {
-        "babel-preset-expo": "^8.3.0",
+        "babel-preset-expo": "8.3.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-jest": "^23.6.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.18.0",
-        "jest-expo": "^39.0.0",
+        "jest-expo": "^40.0.0",
         "node-sass": "^4.13.1",
         "react-scripts": "2.1.8"
     }
